testing/framework/resources/Advanced/Failing/mondrian/query6243.e
USA	CA	Palo Alto	5005	Andre Thompson	Andre Thompson	M	M	High School Degree	$30K - $50K
USA	CA	Palo Alto	7495	Sandy Melton	Sandy Melton	F	S	High School Degree	$50K - $70K
USA	CA	Redwood City	10197	Cleo Passig	Cleo Passig	F	M	Partial College	$30K - $50K
USA	CA	Redwood City	8830	Juan Bradley	Juan Bradley	F	S	High School Degree	$30K - $50K
USA	CA	San Carlos	8648	Mary Welch	Mary Welch	F	S	Graduate Degree	$110K - $130K
USA	CA	San Jose	4293	Joseph Burke	Joseph Burke	M	S	Partial High School	$70K - $90K
